[gd_scene load_steps=8 format=3 uid="uid://cdsoyasi8vk3c"]

[ext_resource type="Script" path="res://SwordBall.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bswdmdqxjmidm" path="res://sword.png" id="2"]
[ext_resource type="AudioStream" uid="uid://bfusr0dnwtpom" path="res://sfx/sword-slash.mp3" id="3"]
[ext_resource type="AudioStream" uid="uid://4vax64ipyh0" path="res://sfx/metal-clang.mp3" id="4"]
[ext_resource type="AudioStream" uid="uid://dl61i4aq4orlm" path="res://sfx/low-floor-tom.mp3" id="5"]

[sub_resource type="CircleShape2D" id="1"]
radius = 26.0

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(60, 14)

[node name="Ball" type="RigidBody2D"]
collision_layer = 4
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="HpLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitstunTrailLayer" type="Node2D" parent="."]
z_index = 5

[node name="SwordPivot" type="Node2D" parent="."]

[node name="Sword" type="Area2D" parent="SwordPivot"]
collision_layer = 2
collision_mask = 6

[node name="Sprite2D" type="Sprite2D" parent="SwordPivot/Sword"]
rotation = 0.785398
scale = Vector2(0.08, 0.08)
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordPivot/Sword"]
shape = SubResource("2")

[node name="SfxSlash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
volume_db = -6.0

[node name="SfxClash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
volume_db = -6.0

[node name="SfxFloorTom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
volume_db = -6.0
